[package]
name = "rns-tun"
description = "Reticulum TUN adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.*"
riptun = { version = "0.1.*", default-features = false, features = ["tokio-impl"] }
tokio = { version = "1.44.*", features = ["full"] }

[dev-dependencies]
rand_core = { version = "0.6.*", features = ["getrandom"] }
env_logger = "0.11.*"
nix = "0.23.*"

[dependencies.reticulum]
git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
#path = "../../remote/Reticulum-rs"
version = "0.1.*"
